@@ -5,6 +5,7 @@
 - extended the schema object by adding `.actions = {}` property (with all defined actions)
 - added `NEWACTION()` method that offers awesome functionality for independent actions in the schema
 - removed unused `CONF.logger`
+- improved API routing in the form `ROUTE('API /api/ +action_name')`;
 
 ========================
 0.0.80
